@startuml

interface IFile {
    FileName: string
    WriteContent() : void
}

together {
    class File {
        - _content : string
        + FileName : string;
        + File(fileName : string)
        + WriteContent() : void
    }
    
    class FileProxy {
        - _file : File
        - _username : string
        + FileName : string
        + FileProxy(userName : string, fileName : string)
        + WriteContent() : void
        - checkAccess() : bool
    }
}

IFile <|.. File
IFile <|.. FileProxy

FileProxy *-- File

File -[hidden]> FileProxy

@enduml